feat: deactivateBatch endpoint
